# liberata-scientometrics

./: .buildinfo  .gitignore  CNAME  LICENSE  README.md  genindex.html  index.html  liberata_metrics.generators.generate_matrices.html  liberata_metrics.generators.html  liberata_metrics.html  liberata_metrics.metrics.html  liberata_metrics.metrics.market_metrics.html  liberata_metrics.metrics.portfolio_metrics.html  liberata_metrics.utils.data_loading.html  liberata_metrics.utils.data_wrangling.html  liberata_metrics.utils.html  liberata_metrics.utils.utils.html  liberata_metrics.visualizations.html  liberata_metrics.visualizations.matrix_visuals.html  liberata_metrics.visualizations.time_series_visuals.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  liberata_metrics.doctree  liberata_metrics.generators.doctree  liberata_metrics.generators.generate_matrices.doctree  liberata_metrics.metrics.doctree  liberata_metrics.metrics.market_metrics.doctree  liberata_metrics.metrics.portfolio_metrics.doctree  liberata_metrics.utils.data_loading.doctree  liberata_metrics.utils.data_wrangling.doctree  liberata_metrics.utils.doctree  liberata_metrics.utils.utils.doctree  liberata_metrics.visualizations.doctree  liberata_metrics.visualizations.matrix_visuals.doctree  liberata_metrics.visualizations.time_series_visuals.doctree  modules.doctree
_modules/: index.html
_sources/: liberata_metrics.generators.rst.txt  liberata_metrics.metrics.portfolio_metrics.rst.txt  liberata_metrics.rst.txt  liberata_metrics.visualizations.time_series_visuals.rst.txt
api/: index.html  liberata_metrics.generators.generate_matrices.html  liberata_metrics.generators.html  liberata_metrics.html  liberata_metrics.integrations.html  liberata_metrics.integrations.supabase.html  (+17 more)
(+114 files in other folders)
