[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liberata-metrics"
version = "0.15.1"
description = "Liberata metrics library"
readme = "README.md"
authors = [
    {name = "Hanlin Wang", email = "hanlin.wang@duke.edu"},
    {name = "Arjun Saha Choudhury", email = "arjun.sahachoudhury@duke.edu"},
    {name = "Derek Wang", email = "xiran.wang@duke.edu"},
    {name = "Anshuman Sabath", email = "anshuman.sabath@duke.edu"},
    {name = "Aarsh Roongta", email = "aarsh.roongta@duke.edu"}
]
maintainers = [
    {name = "Hanlin Wang", email = "hanlin.wang@duke.edu"}
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "pyyaml",
    "pytest",
]
requires-python = ">=3.8"

[project.optional-dependencies]
supabase = ["supabase", "python-dotenv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test_scripts"]
markers = [
    "large: tests requiring pre-generated large matrix files on disk",
]